# icloudpd-web

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.docker.md  README.md  build.sh  docker-compose.yml  docker-entrypoint.sh  flake.nix  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.json
api/: pyproject.toml
api/src/icloudpd_api/: data_models.py  download_option_utils.py  icloud_helper.py  icloud_utils.py  logger.py  main.py  policy_handler.py  session_handler.py
docs/: MANUAL_TESTING.md
docs/superpowers/plans/: 2026-04-19-icloudpd-web-backend-redesign.md  2026-04-19-icloudpd-web-frontend-redesign.md  2026-04-19-icloudpd-web-testing.md
docs/superpowers/specs/: 2026-04-19-icloudpd-web-backend-redesign-design.md  2026-04-19-icloudpd-web-frontend-redesign-design.md  2026-04-19-icloudpd-web-testing-design.md  2026-04-20-release-script-design.md
example_policy/: example.toml  example_backup.toml
icloudpd-api/: pyproject.toml
icloudpd-api/src/: __init__.py  main.py
icloudpd-api/src/icloudpd_api/: data_models.py  main.py  policy_handler.py  session_handler.py
icloudpd-web/: package-lock.json  package.json  test.js
icloudpd-web/src/app/: page.tsx
icloudpd-web/src/components/: CreatePolicyModal.tsx  Panel.tsx
icloudpd-web/src/hooks/: useSocket.ts
icloudpd-web/src/types/: index.ts
policy/: example.toml
scripts/: check_upstream.py  release.sh
server/: pyproject.toml  pyrightconfig.json
server/src/icloudpd_web/: app.py  cli.py
server/src/icloudpd_web/api/: policy_handler.py  session_handler.py
server/src/icloudpd_web/webapp/: 404.html  index.html  index.txt
server/src/icloudpd_web/webapp/404/: index.html
server/src/icloudpd_web/webapp/_next/static/chunks/: 524-45ea32ef736313ef.js  647-39cd2d18c973e974.js  648-ec398f9163f803d8.js  main-app-8314a88397048a60.js
server/src/icloudpd_web/webapp/_next/static/chunks/app/: layout-ed7977c72e9dfbf8.js  page-af030660571644a5.js  page-b9dcb4c11cae125b.js  page-f57979d00496f08b.js
src/app/: layout.tsx  page.tsx
src/components/: CreatePolicyModal.tsx  PolicyList.tsx
src/data/: policies.toml
src/handler/: handler.ts
src/hooks/: useSocket.ts
src/icloudpd_web/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  errors.py  static.py
src/icloudpd_web/api/: apprise_handler.py  auth.py  authentication_local.py  aws_handler.py  client_handler.py  data_models.py  download_option_utils.py  error.py  icloud_utils.py  logger.py  mfa.py  policies.py  policy_handler.py  runs.py  settings.py  streams.py
src/icloudpd_web/integrations/: apprise_notifier.py  aws_sync.py
src/icloudpd_web/runner/: config_builder.py  folder_structure.py  list_libraries.py  log_retention.py  mfa.py  post_filter.py  run.py  runner.py
src/icloudpd_web/scheduler/: scheduler.py
src/icloudpd_web/store/: models.py  policy_store.py  secrets.py
src/server/: handler.ts  index.ts  server.ts  start.ts
src/types/: index.ts
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_coverage_gates.py  test_errors.py  test_lifespan.py  test_smoke.py  test_static.py
tests/api/: conftest.py  test_auth.py  test_error_contract.py  test_mfa.py  test_mfa_workflow.py  test_policies.py  test_run_history.py  test_runs.py  test_settings.py  test_streams.py  test_wiring.py  test_workflows.py
tests/fixtures/: fake_icloudpd.py
tests/integrations/: test_apprise_notifier.py  test_aws_sync.py
tests/runner/: test_build_argv_flag_audit.py  test_config_builder.py  test_discover.py  test_folder_structure.py  test_list_libraries.py  test_log_retention.py  test_mfa.py  test_mfa_flow.py  test_post_filter.py  test_real_icloudpd_syntax.py  test_run.py  test_run_filter_integration.py  test_run_sidecar.py  test_runner.py
tests/scheduler/: test_scheduler.py
tests/store/: test_models.py  test_policy_store.py  test_secrets.py
web/: .eslintrc.cjs  index.html  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  test_api.js  tsconfig.json  vite.config.ts
web/src/: app.tsx  index.css  main.tsx
web/src/api/: auth.ts  client.test.ts  client.ts  mfa.ts  policies.ts  runs.ts  settings.ts  sse.ts
web/src/app/: layout.tsx  page.tsx  providers.tsx
web/src/components/: AuthGate.tsx  AuthenticationModal.tsx  Banner.tsx  CancelConfirmationDialog.tsx  ConfirmDialog.tsx  DeleteConfirmationDialog.tsx  EditModalFields.tsx  EditPolicyModal.tsx  InterruptConfirmationDialog.tsx  LogViewerModal.tsx  LoginScreen.tsx  MFAModal.tsx  MfaModal.tsx  Panel.tsx  PolicyDialogs.tsx  PolicyFilters.tsx  PolicyList.tsx  PolicyModals.tsx  PolicyRow.tsx  RunDetailModal.tsx  RunHistoryModal.tsx  ServerAuthenticationModal.tsx  SettingsModal.tsx  Toast.tsx  ToastBridge.tsx
web/src/components/settings/: DownloadSettings.tsx  GeneralSettings.tsx  IntegrationSettings.tsx  UserSettings.tsx
web/src/components/ui/: badge.tsx  (+3 more)
web/src/hooks/: useAuth.ts  usePolicies.ts  useRunEvents.ts  useRuns.ts  useSettings.ts  useSocket.ts  useSocketEvents.ts
web/src/lib/: policyMapping.test.ts  policyMapping.ts  queryClient.ts
web/src/store/: runStore.ts  toastStore.ts
web/src/types/: api.ts  index.ts  streamsaver.d.ts
web/tests/api/: client.test.ts  mfa.test.ts  policies.test.ts  sse.test.ts
web/tests/components/: EditPolicyModal.test.tsx  LoginScreen.test.tsx  PolicyList.test.tsx  RunDetailModal.test.tsx  SettingsModal.test.tsx  Toast.test.tsx
web/tests/hooks/: useAuth.test.tsx  usePolicies.test.tsx  useRunEvents.test.tsx
web/tests/store/: runStore.test.ts
