[project]
name = "icloudpd-web"
version = "2026.4.19"
description = "Web UI for icloud-photos-downloader"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "croniter>=2.0",
  "apprise>=1.8",
  "icloudpd==1.32.2",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
]

[project.scripts]
icloudpd-web = "icloudpd_web.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icloudpd_web"]
exclude = [
  "web",
  "tests",
  "docs",
]

[tool.hatch.build.targets.wheel.force-include]
"src/icloudpd_web/web_dist" = "icloudpd_web/web_dist"

[tool.hatch.build.targets.sdist]
exclude = [
  "web/node_modules",
  "web/dist",
  ".dev-data",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["smoke: end-to-end smoke tests"]
addopts = "--cov=src/icloudpd_web --cov-report=term-missing --cov-report=xml --cov-branch"

[tool.coverage.run]
branch = true
source = ["src/icloudpd_web"]
omit = ["src/icloudpd_web/web_dist/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
