[project]
name = "icloudpd-web"
version = "0.1.0"
description = "Web application for iCloud Photos Downloader, based on icloudpd"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "icloudpd",
    "python-socketio",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/icloudpd_web/webapp/**/*",  # next.js build output
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/icloudpd_web"]
